--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>A te, strò! Che bellezza!</h1>
-<p>Mi chiamo sito di test. Sono italiano.</p>
+<p>Mi chiamo sito di test. Sono italiano. E bello.</p>
 <h2>Quale è la tua lingua preferita?</h2>
 <p>E' divertente essere un sito di test.</p>
 <h3>Ma sai che scrivere è bello?</h3>
