--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Ciao, strò!</title>
 </head>
 <body>
-<h1>A te, strò! Che bellezza!</h1>
+<h1>A te, strò! Che bellezza! Wow! Wowow ieie!</h1>
 <p>Mi chiamo sito di test. Sono italiano. E bello, bellissimo.</p>
 <h2>Quale è la tua lingua preferita?</h2>
 <p>E' divertente essere un sito di test.</p>
