cambio in un nuovo file

--- a/site/index.html
+++ b/site/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ciao, strò!</title>
+	<title>Questo è il mio nuovo sito</title>
 </head>
 <body>
-<h1>A te, strò! Che bellezza! Wow! Wowow ieie!</h1>
-<p>Mi chiamo sito di test. Sono italiano. E bello, bellissimo.</p>
-<h2>Quale è la tua lingua preferita?</h2>
-<p>E' divertente essere un sito di test.</p>
-<h3>Ma sai che scrivere è bello?</h3>
-<p>Sì.</p>
-<h3>E lo è anche leggere. Anche questo è un tag h3.</h3>
-<h6>E invece questo è un tag h6.</h6>
-<h16>Un tag h16 scritto manualmente. Viene preso come un tag p.</h16>
-<p>Questo è un p. A me sembra uguale</p>
+
 </body>
 </html>
