--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
 	<title>Questo è il mio nuovo sito</title>
 </head>
 <body>
-
+<h1>Titolo del mio nuovo sito.</h1>
+<p>Questo paragrafo è molto corto.</p>
+<h2>Questa intestazione è più piccola.</h2>
 </body>
 </html>
