--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Questo è il mio nuovo sito</title>
+  <title>IL sito di Sequi</title>
 </head>
 <body>
-<h1>Titolo del mio nuovo sito.</h1>
-<p>Questo paragrafo è molto corto.</p>
-<h2>Questa intestazione è più piccola.</h2>
+<h1>Sequestro è coglione</h1>
+<p>Mi chiamo Andrea e mi piacciono i gay.</p>  
 </body>
 </html>
